networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__exception__system__egress__ports__443__nr23__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--exception--system--egress--ports--443--nr23
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
